# feedme

./: .gitignore  AUDIT_FINDINGS.md  AUTHORS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  SPONSORS.md  errors.ndjson  test_quickstart.rs
.github/: FUNDING.yml
.github/workflows/: publish.yml  test-and-coverage.yml
benches/: pipeline_benchmark.rs
docs/: design_rationale.md  index.html  invariants.md  ppt_invariant_guide.md  success.html
examples/: 01_redact_validate_deadletter.rs  02_filter_warn_error.rs  03_field_projection.rs  04_directory_ingest.rs  05_custom_stage.rs  06_syslog_parsing.rs  07_metrics_export_demo.rs  08_stdin_streaming.rs  09_complex_pipeline.rs  10_plugin_usage.rs  11_config_driven_pipeline.rs  12_error_handling_variations.rs  13_performance_baseline_guard.rs  14_fault_injection_testing.rs  15_audit_trail.rs  16_pipeline_evolution.rs  17_fused_rule_engine.rs  18_derived_and_remap.rs  19_constraints_and_types.rs  20_file_output.rs  21_common_pipeline.rs  99_failure_tour.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_pipeline.rs  fuzz_target_1.rs
samples/: combined.ndjson  complex_deadletter.ndjson  complex_output.ndjson  errors.ndjson  input.ndjson  messy.ndjson  processed.ndjson
samples/logs/: file1.ndjson  file2.ndjson
src/: audit.rs  fault_injection.rs  fused.rs  invariant_ppt.rs  lib.rs  ppt_invariant_contracts.rs  replay.rs
wiki/: Feedmenomicon.md
