[workspace]
members = ["."]
exclude = ["fuzz"]

[package]
name = "feedme"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic streaming pipeline engine with FSE (selector-first single-pass rule evaluation), fault injection, baseline regression detection, audit attestation, and pipeline evolution tracking."
documentation = "https://docs.rs/feedme"
homepage = "https://github.com/Michael-A-Kuykendall/feedme"
repository = "https://github.com/Michael-A-Kuykendall/feedme"
exclude = [
    "archive/",
    "*.zip",
    "*.tar.gz",
    "*.crate",
    "*.html",
    "coverage/",
    "artifacts/",
    "wiki/",
    ".claude/",
    ".copilot/",
    "**/.claude/",
    "**/.copilot/"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
regex = "1.0"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }

[features]
# Enables PPT-style runtime invariant logging + contract checks.
# CI runs with `--all-features`, so this stays enforced without affecting default release builds.
invariant-ppt = []

# Enables the fused rule evaluation engine: selector deduplication,
# single-pass multi-rule evaluation, and early-exit via rule-state bitmap.
fused = []

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3.0"

[[example]]
name = "01_redact_validate_deadletter"
path = "examples/01_redact_validate_deadletter.rs"

[[example]]
name = "02_filter_warn_error"
path = "examples/02_filter_warn_error.rs"

[[example]]
name = "03_field_projection"
path = "examples/03_field_projection.rs"

[[example]]
name = "04_directory_ingest"
path = "examples/04_directory_ingest.rs"

[[example]]
name = "05_custom_stage"
path = "examples/05_custom_stage.rs"

[[example]]
name = "06_syslog_parsing"
path = "examples/06_syslog_parsing.rs"

[[example]]
name = "07_metrics_export_demo"
path = "examples/07_metrics_export_demo.rs"

[[example]]
name = "08_stdin_streaming"
path = "examples/08_stdin_streaming.rs"

[[example]]
name = "09_complex_pipeline"
path = "examples/09_complex_pipeline.rs"

[[example]]
name = "10_plugin_usage"
path = "examples/10_plugin_usage.rs"

[[example]]
name = "11_config_driven_pipeline"
path = "examples/11_config_driven_pipeline.rs"

[[example]]
name = "12_error_handling_variations"
path = "examples/12_error_handling_variations.rs"

[[example]]
name = "13_performance_baseline_guard"
path = "examples/13_performance_baseline_guard.rs"

[[example]]
name = "14_fault_injection_testing"
path = "examples/14_fault_injection_testing.rs"

[[example]]
name = "15_audit_trail"
path = "examples/15_audit_trail.rs"

[[example]]
name = "16_pipeline_evolution"
path = "examples/16_pipeline_evolution.rs"

[[example]]
name = "17_fused_rule_engine"
path = "examples/17_fused_rule_engine.rs"

[[example]]
name = "18_derived_and_remap"
path = "examples/18_derived_and_remap.rs"

[[example]]
name = "19_constraints_and_types"
path = "examples/19_constraints_and_types.rs"

[[example]]
name = "20_file_output"
path = "examples/20_file_output.rs"

[[example]]
name = "21_common_pipeline"
path = "examples/21_common_pipeline.rs"

[[example]]
name = "99_failure_tour"
path = "examples/99_failure_tour.rs"
